[iOS] Correctly reload Sync Encryption settings screen on sync changes.

Sync Encryption screen now listens to sync changes and reloads itself
when necessary. This ensures modifications to the passphrase (done by
the Sync Encryption Passphrase screen) are reflected in the UI.

BUG=678609

Review-Url: https://codereview.chromium.org/2610403003
Cr-Commit-Position: refs/heads/master@{#441927}

Former-commit-id: e97a0d3d3c1d8f6ed0d5597f9a4f595a9b057b2e